--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "kill-port": "^1.5.1",
     "lodash": "^4.17.15",
-    "nodemon": "^1.19.1"
+    "mysql2": "^1.7.0",
+    "nodemon": "^1.19.1",
+    "sequelize": "^5.18.4"
   }
 }
